--- a/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb
+++ b/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,24 +910,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 4 is out of bounds for axis 0 with size 4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb Cell 21\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# Make movie recommendations for the target user\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m# Choose a target user to make recommendations for\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m target_user \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m recommended_movies \u001b[39m=\u001b[39m recommend_movies(ratings, target_user)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Print the recommended movies\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mRecommended movies:\u001b[39m\u001b[39m\"\u001b[39m, recommended_movies)\n",
-      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb Cell 21\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m unwatched_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(user_ratings[target_user] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Predict the ratings for the unwatched movies\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m predicted_ratings \u001b[39m=\u001b[39m [predict_rating(user_ratings[target_user], user_ratings[:, movie_index]) \u001b[39mfor\u001b[39;00m movie_index \u001b[39min\u001b[39;00m unwatched_indices]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Sort the movies by the predicted rating in descending order\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sorted_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(predicted_ratings)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb Cell 21\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m unwatched_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(user_ratings[target_user] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Predict the ratings for the unwatched movies\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m predicted_ratings \u001b[39m=\u001b[39m [predict_rating(user_ratings[target_user], user_ratings[:, movie_index]) \u001b[39mfor\u001b[39;00m movie_index \u001b[39min\u001b[39;00m unwatched_indices]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Sort the movies by the predicted rating in descending order\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sorted_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(predicted_ratings)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop5/Workshop week 10 Association Mining and Recommender Systems.ipynb Cell 21\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m ratings \u001b[39m=\u001b[39m movie_ratings[rated_indices]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Get the user vectors of the rated users\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m rated_users \u001b[39m=\u001b[39m user_ratings[rated_indices]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Calculate the similarities between the rated users and the target user\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop5/Workshop%20week%2010%20Association%20Mining%20and%20Recommender%20Systems.ipynb#X25sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m similarities \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([similarity(user_ratings, rated_user) \u001b[39mfor\u001b[39;00m rated_user \u001b[39min\u001b[39;00m rated_users])\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 4"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def recommend_movies(user_ratings, target_user):\n",
     "    # Get the number of users and movies\n",
@@ -940,10 +925,10 @@
     "    predicted_ratings = [predict_rating(user_ratings, user_ratings[:, movie_index]) for movie_index in unwatched_indices]\n",
     "    \n",
     "    # Sort the movies by the predicted rating in descending order\n",
-    "    <your code>\n",
+    "    sorted_indices = np.argsort(predicted_ratings)[::-1]\n",
     "    \n",
     "    # Get the top 3 recommended movies\n",
-    "    <your code>\n",
+    "    recommended_movies = sorted_indices[:3]\n",
     "    \n",
     "    return recommended_movies\n",
     "\n",
@@ -961,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +969,7 @@
     "# 5        0.0  0.0  0.0  0.0  0.0  5.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
     "# ...      ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
     "\n",
-    "<Your code>\n",
+    "user_movie_ratings = ratings.pivot_table(index='userId', columns='movieId', values='rating')\n",
     "\n",
     "'''\n",
     "In a real world, ratings are very sparse and data points are mostly collected \n",
@@ -997,7 +982,12 @@
     "\n",
     "Implement a filter as specified above\n",
     "'''\n",
-    "<your code>\n",
+    "qualified_movies = user_movie_ratings.columns[user_movie_ratings.apply(lambda x: x.count(), axis=0) >= 10]\n",
+    "qualified_users = user_movie_ratings.index[user_movie_ratings.apply(lambda x: x.count(), axis=1) >= 50]\n",
+    "\n",
+    "# Filter user-movie ratings matrix based on qualified movies and users\n",
+    "user_movie_ratings_filtered = user_movie_ratings.loc[qualified_users, qualified_movies]\n",
+    "\n",
     "\n",
     "# finally,convert ratring into numpy to get\n",
     "#               mvi1, mvi2, ...\n",
@@ -1005,7 +995,7 @@
     "#        user2  [0. ,   0. , 4. , ..., 0. , 2. , 0. ],\n",
     "#        ...,\n",
     "\n",
-    "rating  = <your code>"
+    "rating = user_movie_ratings_filtered.values"
    ]
   },
   {
